# evals

./: .gitignore  README.md  agentuity.yaml  pyproject.toml  server.py  setup_env.py  test_evaluation_creation.py  test_results_api.py
.cursor/rules/: agent.mdc  sdk.mdc
agents/dataset_api/: agent.py
agents/dataset_loader/: agent.py
agents/evaluation_runner/: agent.py
agents/llm_as_judge/: agent.py
agents/my_agent/: agent.py
agents/results_api/: agent.py
agents/template_manager/: agent.py
datasets/: 90s_music_trivia.json  financial_modeling.json  golf_history_records.json  instruction_following.json  math_word_problems.json  reading_comprehension.json  superhero_powers.json  text_classification.json
react-frontend/: package-lock.json  package.json  tailwind.config.js
react-frontend/src/: App.tsx  index.css
react-frontend/src/components/: DatasetPage.tsx  EvaluationPage.tsx  HomePage.tsx  ResultsPage.tsx  SavedEvaluations.tsx  SettingsPage.tsx
react-frontend/src/services/: api.ts
react-frontend/src/utils/: storage.ts
