[project]
name = "evals"
version = "0.1.0"
description = ""
requires-python = ">=3.10, <3.13"
dependencies = [
    "agentuity>=0.0.85",
    "aiohttp>=3.11.18",
    "anthropic>=0.52.0",
]

[tool.uv.sources]
agentuity = { path = "../sdk-py/dist/agentuity-0.0.85.post5+e4ecfb3b66448cd0b1fabe9b46908bff96019e95.tar.gz" }
